[metadata]
name = helmdeps
version = 0.0.1
url = https://github.com/sdelements/helm-deps
description = A tool for identifying helm chart dependencies
long_description = file: README.md
license = MIT
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
python_requires = >=3.6
packages = find:src
include_package_data = true
install_requires =
    pydot >= 1.4.2
    pyyaml >= 6.0

[options.entry_points]
console_scripts =
    helm-deps = src.helmdeps:main
